--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="products_and_services_container">
             <div class="products_and_services_heading">
                 <div class="line"></div>
-                <div class="products_and_services_heading_txt">ПРОДУКЦИЯ И<br> УСЛУГИ</div>
+                <div class="products_and_services_heading_txt"><span>ПРОДУКЦИЯ И<br> УСЛУГИ</span></div>
             </div>
             
             <div class="cards">
