--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                         <button><span>ПОДСЧИТАТЬ СТОИМОТЬ<br> ЗАКАЗАТЬ</span></button>
                     </div>
                 </div>
+
                 <div class="card card_white" id="indent_width">
                     <div class="card_heading">РАСТВОР</div>
                     <div class="card_info" id="card_info_2">4 марки раствора:</div>
@@ -211,6 +212,23 @@
                         <button><span>ПОДСЧИТАТЬ СТОИМОТЬ<br> ЗАКАЗАТЬ</span></button>
                     </div>
                 </div>
+
+                    <div class="card card_white card_last">
+                        <div class="card_heading">ФБС</div>
+                        <div class="list">
+                            <ul>
+                                <li class="list_margin">Высокая прочность<br> и надежность</li>
+                                <li class="list_margin">Устойчивость к<br> воздействию влаги</li>
+                                <li>Эканомия времени<br> и средств</li>
+                            </ul>
+                        </div>
+    
+                        <div class="price">ЦЕНА ОТ <span class="price_color">16000</span> РУБ *</div>
+    
+                        <div class="products_and_services_button">
+                            <button><span>ПОДСЧИТАТЬ СТОИМОТЬ<br> ЗАКАЗАТЬ</span></button>
+                        </div>
+                    </div>
             </div>
             <div class="products_and_services_text"><span>*</span> - цены указаны за 1 м3 бетона с учетом НДС
                 и <span>без учета</span> поправок на температуру окружающей среды
@@ -231,6 +249,7 @@
                 <div class="chapter chapter_solution">Растворы</div>
                 <div class="chapter chapter_vermiculite ">Вермикулитобетон</div>
                 <div class="chapter chapter_claydite_concrete">Керамзитобетон</div>
+                <div class="chapter chapter_fbs">ФБС</div>
             </div>
 
             <div class="tabel_names">
@@ -379,6 +398,48 @@
                 <div class="tabel_columns_claydite_concrete"> 
                     <div class="tabel_column_claydite_concrete">
                         <div class="tabel_row_cell tabel_column_1">Керамзитобетон М 150</div>
+                        <div class="tabel_row_cell">16000</div>
+                        <div class="tabel_row_cell">16100</div>
+                        <div class="tabel_row_cell">16200</div>
+                        <div class="tabel_row_cell">16300</div>
+                        <div class="tabel_row_cell">16400</div>
+                        <div class="tabel_row_cell tabel_row_cell_button"><button>Заказать!</button></div>
+                    </div>
+                </div>
+                <!-- ----------------- -->
+                <div class="tabel_columns_fbs"> 
+                    <div class="tabel_column_claydite_concrete">
+                        <div class="tabel_row_cell tabel_column_1">ФБС 24-4-6 т</div>
+                        <div class="tabel_row_cell">16000</div>
+                        <div class="tabel_row_cell">16100</div>
+                        <div class="tabel_row_cell">16200</div>
+                        <div class="tabel_row_cell">16300</div>
+                        <div class="tabel_row_cell">16400</div>
+                        <div class="tabel_row_cell tabel_row_cell_button"><button>Заказать!</button></div>
+                    </div>
+
+                    <div class="tabel_column_claydite_concrete">
+                        <div class="tabel_row_cell tabel_column_1">ФБС 24-4-6 т</div>
+                        <div class="tabel_row_cell">16000</div>
+                        <div class="tabel_row_cell">16100</div>
+                        <div class="tabel_row_cell">16200</div>
+                        <div class="tabel_row_cell">16300</div>
+                        <div class="tabel_row_cell">16400</div>
+                        <div class="tabel_row_cell tabel_row_cell_button"><button>Заказать!</button></div>
+                    </div>
+
+                    <div class="tabel_column_claydite_concrete">
+                        <div class="tabel_row_cell tabel_column_1">ФБС 24-4-6 т</div>
+                        <div class="tabel_row_cell">16000</div>
+                        <div class="tabel_row_cell">16100</div>
+                        <div class="tabel_row_cell">16200</div>
+                        <div class="tabel_row_cell">16300</div>
+                        <div class="tabel_row_cell">16400</div>
+                        <div class="tabel_row_cell tabel_row_cell_button"><button>Заказать!</button></div>
+                    </div>
+
+                    <div class="tabel_column_claydite_concrete">
+                        <div class="tabel_row_cell tabel_column_1">ФБС 24-4-6 т</div>
                         <div class="tabel_row_cell">16000</div>
                         <div class="tabel_row_cell">16100</div>
                         <div class="tabel_row_cell">16200</div>
