--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
         <div class="concrete_delivery_heading"><span>ДОСТАВКА БЕТОНА</span></div>   
         <div class="concrete_delivery_txt">В НАШЕМ РАСПОРЯЖЕНИИ ТРИ ТИПА МИКСЕРОВ (БЕТОНОСМЕСИТЕЛЕЙ)</div>
         <div class="delivery_cards">
-            <div class="delivery_card delivery_card_2">
+            <div class="delivery_card">
                 <div class="meters">
                     <div class="meters_text">2 м<sup>3</sup></div>
                 </div>
@@ -519,7 +519,7 @@
                     <div class="price_downtime">2000 р/час</div>
                 </div>
             </div>
-            <div class="delivery_card delivery_card_3">
+            <div class="delivery_card">
                 <div class="meters">
                     <div class="meters_text">3 м<sup>3</sup></div>
                 </div>
@@ -546,7 +546,7 @@
                     <div class="price_downtime">2000 р/час</div>
                 </div>
             </div>
-            <div class="delivery_card delivery_card_5">
+            <div class="delivery_card card_3">
                 <div class="meters">
                     <div class="meters_text">5 м<sup>3</sup></div>
                 </div>
