--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="style/map.css">
     <link rel="stylesheet" href="style/footer.css">
     <link rel="stylesheet" href="style/dropdown_menu.css">
+    <link rel="stylesheet" href="style/header_size.css">
+
     <title>СМДВ</title>
 </head>
 <body>
@@ -135,7 +137,7 @@
         <div class="products_and_services_container">
             <div class="products_and_services_heading">
                 <div class="line"></div>
-                <div class="products_and_services_heading_txt"><span>ПРОДУКЦИЯ И<br> УСЛУГИ</span></div>
+                <div class="products_and_services_heading_txt header_size"><span>ПРОДУКЦИЯ И<br> УСЛУГИ</span></div>
             </div>
             
             <div class="cards">
@@ -269,7 +271,7 @@
     </div>
     <div class="transition_2"></div>
     <div class="price_list" id="prc">
-        <div class="price_list_heading"><span>ПРАЙС-ЛИСТ НА БЕТОН</span></div>
+        <div class="price_list_heading header_size"><span>ПРАЙС-ЛИСТ НА БЕТОН</span></div>
         <div class="price_list_txt">Для летнего периода актуальна общая цена.<br>
             Для минусовых температур - цены, соответствующие окружающей среде.
         </div>
@@ -598,7 +600,7 @@
 
     <div class="rent" id="rnt">
         <div class="rent_main">
-            <div class="rent_heading"><span>АРЕНДА БЕТОНОМЕСИТЕЛЕЙ</span></div> 
+            <div class="rent_heading header_size"><span>АРЕНДА БЕТОНОМЕСИТЕЛЕЙ</span></div> 
             <div class="rent_button">
                 <div class="rent_block_1">
                     <div class="rent_volume">2м<sup>3</sup></div>
@@ -633,7 +635,7 @@
     </div>
 
     <div class="inert_materials" id="im">
-        <div class="inert_materials_heading"><span>ИНЕРТНЫЕ МАТЕРИАЛЫ</span></div> 
+        <div class="inert_materials_heading header_size"><span>ИНЕРТНЫЕ МАТЕРИАЛЫ</span></div> 
         <div class="inert_materials_tabel">
             <div class="inert_materials_chapers">
                 <div class="inert_materials_chapers_container">
@@ -696,7 +698,7 @@
     </div>
 
     <div class="map_container" id="mp">
-        <div class="map_heading"><span>КАК ПРОЕХАТЬ</span></div>
+        <div class="map_heading header_size"><span>КАК ПРОЕХАТЬ</span></div>
         <div id="map">
             <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af0b87ef512e2a5743cfeca730ad0d4aa97a17c617e2444c958a8f05b187e07ec&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
         </div>
@@ -710,11 +712,13 @@
     </div>
 
     <footer id="ftr">
-        ООО “Строймастер ДВ” - производство и продажа бетона во Владивостоке и пригороде<br>
-        г. Владивосток, проспект 100 лет Владивостоку, 159 “Д”<br>
-        <div></div>
-        8 (423) 231-30-58<br>
-        8 (423) 297-99-12 
+        <div>
+            ООО “Строймастер ДВ” - производство и продажа бетона во Владивостоке и пригороде<br>
+            г. Владивосток, проспект 100 лет Владивостоку, 159 “Д”<br>
+            <div></div>
+            8 (423) 231-30-58<br>
+            8 (423) 297-99-12 
+        </div>
     </footer>
 
     <script src="js/button.js"></script>
